--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.2",
         "laravel/sanctum": "^2.14.1",
-        "laravel/tinker": "^2.7"
+        "laravel/tinker": "^2.7",
+        "mercadopago/dx-php": "^2.4"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
@@ -58,4 +59,5 @@
     },
     "minimum-stability": "dev",
     "prefer-stable": true
+    
 }
